Remove duplicate closing document.ready from js. Fix z-index on sidebar-mod

--- a/_src/screen.scss
+++ b/_src/screen.scss
@@ -830,6 +830,7 @@ button[type="button"] {
   @include border-radius(0 0 0 8px);
   background-color: #fff;
   display: none;
+  z-index: 200;
 
 
   &.expanded {
